// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Atoms/Heading ] should render Centered 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-bold is-centered"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Heading ] should render Colors 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-primary size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-tertiary size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-inverted size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Heading ] should render Default 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Heading ] should render Inline 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-bold is-inline"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Heading ] should render Sizes 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-xs weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-sm weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-lg weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-xl weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-2xl weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Heading ] should render Weights 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-normal"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;
